# DEMIURGE

./: .gitignore  ALPHA_LAUNCH_UPDATE.md  ASCENSION_SEAL.json  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DEPLOYMENT_COMPLETE.md  GENESIS_THEME_DEPLOYMENT.md  INSTALLER_CRASH_FIX.md  OVHCLOUD_DEPLOYMENT_GUIDE.md  PORTAL_REDESIGN_COMPLETE.md  README.md  README_ALPHA_LAUNCH.md  REPO_STATE_SEAL.json  SECURITY.md  SESSION_SUMMARY.md  docker-compose.dev.yml  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  start-all.ps1  turbo.json
.github/: BRANCH_PROTECTION.md  CODEOWNERS  PULL_REQUEST_TEMPLATE.md  README.md  SECURITY.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  security.md
.github/workflows/: build.yml  ci.yml  deploy.yml  release.yml
apps/abyss-explorer-desktop/: CMakeLists.txt  README.md
apps/abyss-explorer-desktop/src/: MainWindow.cpp  main.cpp
apps/abyssid-service/: .env.example  .gitignore  package.json
apps/abyssos-portal/: .env.production  GENESIS_THEME.md  nginx-demiurge.cloud-https.conf  package.json  tsconfig.json
apps/archonai-service/: README.md  package.json
apps/dns-service/: .env.example  README.md  demiurge-dns.service  package.json
apps/genesis-launcher/: CMakeLists.txt  LAUNCHER_TEST_GUIDE.md  README.md  RELEASE_COMPLETE.md  test-launcher.ps1
apps/portal-web/: .env.local.example  .gitignore  VERCEL_DEPLOY.md  package.json  vercel.json
apps/qloud-os/: .env.example  DEPLOYMENT.md  GENESIS_THEME.md  README.md  deploy-qloud-os.ps1  deploy-qloud-os.sh  nginx-demiurge.cloud-https.conf  nginx-demiurge.cloud.conf  package.json  tailwind.config.cjs  tsconfig.json  vite.config.ts
apps/qor-desktop/: CMakeLists.txt  README.md  qml.qrc
apps/qorid-service/: package.json
apps/torrnt/: CMakeLists.txt  README.md
arm64-os/: ARCHITECTURE.md  BUILD_WINDOWS.md  FLASH_IMAGE.md  INDEX.md  QUICKSTART.md  README.md
arm64-os/image/: customize.sh
chain/: Cargo.toml
chain/src/: config_loader.rs  (+5 more)
cli/: README.md
deploy/: REBRAND_DEPLOYMENT.md  complete-setup.sh  create-services.sh  deploy-qloud-os-only.ps1  deploy-rebrand.sh  deploy-to-d1.ps1  fix-setup.sh  full-deployment.sh  post-install.sh  production-d1-deploy.sh  production-hardening.sh  setup-ssh-access.ps1  ubuntu-24.04-master.sh  verify-deployment.sh  wipe-server-commands.sh  wipe-server.ps1
docs/: PROJECT_OVERVIEW.md  README.md  index.md
scripts/: check-runtime-registry.ts  ci-guardian.ps1  deploy-all.ps1  deploy-web-interface.ps1  enforce-runtime-integrity.ts  generate-ascension-seal.ps1  generate-pulse-seal.ps1  generate-sovereignty-seal.ps1  ignition-archon-pulse.sh  ignition-remote.ps1  phase5_qorid_backend.sh  update-sovereignty-seal.ts  wipe-server.ps1
templates/: README.md
(+714 files in other folders)
